WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
298180
Regression(
289133@main
) zeroBytes() call in WTF_OVERRIDE_DELETE_FOR_CHECKED_PTR_IMPL is wrong
https://bugs.webkit.org/show_bug.cgi?id=298180
Summary
Regression(289133@main) zeroBytes() call in WTF_OVERRIDE_DELETE_FOR_CHECKED_P...
Chris Dumez
Reported
2025-08-31 17:30:18 PDT
zeroBytes() call in WTF_OVERRIDE_DELETE_FOR_CHECKED_PTR_IMPL is wrong after
289133@main
. It now zeros out the pointer instead of the object pointed to by the pointer.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-08-31 17:30:30 PDT
<
rdar://problem/159573226
>
Chris Dumez
Comment 2
2025-08-31 17:31:58 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/50131
Chris Dumez
Comment 3
2025-08-31 18:11:08 PDT
<
rdar://problem/156300845
>
EWS
Comment 4
2025-09-02 01:13:24 PDT
Committed
299425@main
(b99f8c3daae0): <
https://commits.webkit.org/299425@main
> Reviewed commits have been landed. Closing PR #50131 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug